# Fastapi_app

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  docker_ip.py  main.py  pyproject.toml  requirements.txt
app/api/v1/: __init__.py
app/api/v1/auth/: auth.py  schemas.py  views.py
app/api/v1/departments/: crud.py  schemas.py  views.py
app/api/v1/officers/: crud.py  schemas.py  views.py
app/database/: models.py  session.py
app/test/: test_crud.py
app/tests/: test_auth.py  test_crud.py
